--- a/src/assets/styles/partials/_variables.scss
+++ b/src/assets/styles/partials/_variables.scss
@@ -1,2 +1,34 @@
 $bg-color: #fefefe;
 $text-color: #333;
+
+$colorRed: #FF0052;
+$colorBlue: #131661;
+$colorWhite: #FFFFFF;
+$lightgreen: #00B67A;
+$colorBlack: #000000;
+$secondaryBlue: #090E38;
+$color-cards: #232B5C;
+$main-bg-color: #009d63;
+$main-text-color: #009d63;
+$second-text-color: #bbbec5;
+$second-bg-color: #c1efde;
+
+$main-black: #03071e;
+$black-red: #370617;
+$red-black: #6A040F;
+$red: #9D0208;
+$reeed: #D00000;
+$orange: #E85D04;
+$yelloworan: #F48C06;
+$yeellow: #FAA307;
+$giallo: #FFBA08;
+
+/***Mario Bros****/
+
+$redMario:#E60012;
+$blueMario: #0060AD;
+$greenMario: #46AD37;
+$gialloMario:#FED200;
+$bluelightMario: #009EDB;
+$main-mario: #F4F4F4;
+/****************/
