--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -3,17 +3,21 @@
 $fa-font-path: '../webfonts';
 @import '@fortawesome/fontawesome-free/scss/fontawesome.scss';
 @import '@fortawesome/fontawesome-free/scss/solid.scss';
+@import "@fortawesome/fontawesome-free/scss/brands.scss";
+@import url('https://fonts.googleapis.com/css2?family=Righteous&family=Work+Sans:wght@100;300;400;600;800&display=swap');
 @import url("https://fonts.googleapis.com/css?family=Fira+Sans:400,500,600,700,800");
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 @import 'bootstrap/scss/bootstrap';
 
 html, body {
     height: 100%;
+      scroll-behavior: smooth;
+  
   }
   
   body {
     background-color: $main-mario;
-    font-family: 'Press Start 2P', cursive;
+    // font-family: 'Press Start 2P', cursive;
   }
   
   .pagination {
@@ -50,3 +54,167 @@ html, body {
       background-color: $main-bg-color !Important;
       color:white;
   }
+////////////////*********ABOUT ME************///////////////////////
+.aboutme{
+  background-color: $blueMario;
+  color: #fff;
+  padding: 50px 20px;
+}
+.aboutme .contenuto-section{
+  max-width: 1100px;
+  margin: auto;
+}
+.aboutme
+ h2{
+  font-size: 48px;
+  font-family: 'Righteous';
+  text-align: center;
+  padding: 20px 0;
+
+}
+.aboutme .contenuto-section p{
+  font: 18px;
+  line-height: 22px;
+  margin-bottom: 20px;
+}
+.aboutme .contenuto-section p span{
+  color: $gialloMario;
+  font-weight: bold;
+}
+.aboutme .fila{
+  display: flex;
+}
+.aboutme .fila .col
+{
+  width: 50%;
+}
+.aboutme .fila .col h3{
+  font-size: 28px;
+  font-family: 'Righteous';
+  margin-bottom: 25px;
+}
+.aboutme .fila .col ul{
+  list-style: none;
+}
+.aboutme .fila .col ul li{
+  margin: 12px 0;
+}
+.aboutme .fila .col ul li strong{
+  display: inline-block;
+  color: $gialloMario;
+  width: 130px;
+}
+.aboutme .fila .col ul li span{
+  background-color: #1CB698;
+  padding: 3px;
+  font-weight: bold;
+  border-radius: 5px;
+}
+.aboutme .fila .col .container-interesi{
+  display: flex;
+  flex-wrap: wrap;
+}
+.aboutme .fila .col .container-interesi .interesi{
+  width: 100px;
+  height: 100px;
+  background-color: $greenMario;
+  border-radius: 10px;
+  margin: 0 15px 15px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  transition: .3s;
+  text-transform: uppercase;
+}
+.aboutme .fila .col .container-interesi .interesi:hover{
+  background-color: $gialloMario;
+  color: $blueMario
+}
+.sobremi .fila .col .contenedor-intereses .interesi i{
+  font-size: 30px;
+  margin-bottom: 10px;
+}
+.aboutme button{
+  cursor: pointer;
+  background-color: transparent;
+  border: 2px solid #fff;
+  width: fit-content;
+  display: block;
+  margin: 20px auto;
+  padding: 10px 22px;
+  font-size: 16px;
+  color: #fff;
+  position: relative;
+  z-index: 10;
+}
+.aboutme button .overlay{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  background-color: $greenMario;
+  z-index: -1;
+  transition: 1s;
+}
+.aboutme button:hover .overlay{
+  width: 100%;
+}
+
+
+/// ///////////**********************///////////////////
+/// 
+.section {
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  
+}
+.skill
+ h2{
+  font-size: 48px;
+  font-family: 'Righteous';
+  text-align: center;
+  padding: 30px 0;
+}
+.bg-skills{
+  background-color: $greenMario;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  gap: 20px;
+}
+
+.grid-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f0f0f0;
+  padding: 20px;
+  border-radius: 8px;
+  text-align: center;
+}
+
+.logo-image {
+  width: 80px;
+  height: 80px;
+}
+
+.logo-name {
+  margin-top: 10px;
+  font-weight: bold;
+}
+
+.fade-enter-active,
+.fade-leave-active {
+  transition: opacity 0.5s;
+}
+
+.fade-enter,
+.fade-leave-to {
+  opacity: 0;
+}
+/// 
